# param-17b-open-ai-sdk-api

./: .dockerignore  .env.example  COMMANDS.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  build.sh  client.py  deploy.sh  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  nginx.conf  pyproject.toml  server_usage.sh  test_docker_endpoints.sh  test_openai_sdk.py  test_server.py
bharatgen_openai/: __init__.py  client.py  models.py  parser.py
bharatgen_openai/adapters/: __init__.py  gradio_adapter.py
bharatgen_openai/server/: __init__.py  __main__.py  app.py
docs/: API_SERVER_TEST_REPORT.md
examples/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  TEST_SUMMARY.md  basic_chat.py
